@@ -194,8 +194,12 @@ void CallButton::Call(int direction)
 				//and if it's either going the same direction as the call or not moving at all
 				if ((sbs->GetElevator(Elevators[i])->Direction == direction || sbs->GetElevator(Elevators[i])->Direction == 0) && sbs->GetElevator(Elevators[i])->IsMoving == false && sbs->GetElevator(Elevators[i])->AreDoorsOpen() == false)
 				{
-					closest = current;
-					closest_elev = i;
+					//and if it's not in any service mode
+					if (sbs->GetElevator(Elevators[i])->InServiceMode() == false)
+					{
+						closest = current;
+						closest_elev = i;
+					}
 				}
 			}
 		}
