@@ -1,5 +1,10 @@
 Version 1.4 (2.0 Alpha 4)
 -------------------------
+-added syntax checking and error notification to the script processor
+-fixed an old bug that could crash the sim if the floor ID matched a non-existent texture
+-changed ground collision handling so that users can now stand on top of moving elevators (and other objects)
+-added support (and FloorSkipText parameter) for showing express zone indicators during floor skips
+-added ACP, Up Peak, Down Peak, Independent Service, Inspection Service, and Fire Service phases 1 and 2 modes to elevators (not all work yet)
 
 Version 1.3 (2.0 Alpha 3)
 -------------------------
